Code refactoring.